# harmony

./: Cargo.toml
examples/: basic_ping.rs
src/: lib.rs
src/cache/: mod.rs
src/client/: builder.rs  colors.rs  context.rs  event_handler.rs  harmony_error.rs  mod.rs
src/http/: builder.rs  client.rs  mod.rs
src/models/: embed.rs  error.rs  file.rs  message.rs  mod.rs  revolt.rs  server.rs  user.rs
src/models/channel/: dm_channel.rs  group_channel.rs  mod.rs  notes_channel.rs  partial_channel.rs  text_channel.rs  voice_channel.rs
src/models/events/: client.rs  server.rs
src/websocket/: mod.rs
