[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "examples/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
url = "2.4"
futures-util = "0.3"
thiserror = "1.0"
iso8601-timestamp = "0.2"
async-channel = "1.8"
async-trait = "0.1"

[dependencies.tokio-tungstenite]
version = "0.19"
features = [ "native-tls" ]

[dependencies.tokio]
version = "1.29"
features = [ "full" ]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]